[workspace]
members = [
  "tonic",
  "tonic-build",
  "tonic-health",
  "tonic-types",
  "tonic-reflection",
  "tonic-web", # Non-published crates
  "examples",
  "interop", # Tests
  "tests/included_service",
  "tests/same_name",
  "tests/service_named_service",
  "tests/wellknown",
  "tests/wellknown-compiled",
  "tests/extern_path/uuid",
  "tests/ambiguous_methods",
  "tests/extern_path/my_application",
  "tests/integration_tests",
  "tests/stream_conflict",
  "tests/root-crate-path",
  "tests/compression",
  "tonic-web/tests/integration",
]

[patch.crates-io]
prost = { git = "https://github.com/sisudata/prost", rev = "c33982ca4abcdaf2c16b6ded1297587fd1b60678" }
prost-types = { git = "https://github.com/sisudata/prost", rev = "c33982ca4abcdaf2c16b6ded1297587fd1b60678" }
prost-build = { git = "https://github.com/sisudata/prost", rev = "c33982ca4abcdaf2c16b6ded1297587fd1b60678" }
prost-derive = { git = "https://github.com/sisudata/prost", rev = "c33982ca4abcdaf2c16b6ded1297587fd1b60678" }
